[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Messages to be sent between the web browser and the web extension"
license = "MIT"
name = "titanium-common"
repository = "https://github.com/antoyo/titanium"
version = "0.1.0"

[dependencies]
gio = "^0.9.0"
glib = "^0.10.0"
log = "^0.4.1"
relm = "^0.20.0"
relm-derive = "^0.20.0"
rmp-serialize = "^0.8.0"
rustc-serialize = "^0.3.24"

[features]
default = ["gio/v2_44"]
