[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Web extension for the web titanium"
license = "MIT"
name = "titanium-web-extension"
repository = "https://github.com/antoyo/titanium"
version = "0.1.0"

[dependencies]
gio = "^0.5.0"
glib = "^0.6.0"
lazy_static = "^0.2.8"
log = "^0.3"
regex = "^0.2.2"
relm-derive = "^0.15.0"
relm-derive-state = "^0.15.0"
relm-state = "^0.15.0"
send-cell = "^0.1.2"
simplelog = "^0.4"
syslog = "^3.2.0"
url = "^1.2"
webkit2gtk-webextension = "^0.7.0"
xdg = "^2.0"

[dependencies.titanium-common]
path = "../titanium-common"
version = "0.1.0"

[features]
default = [
    "relm-derive-state/unstable",
    "webkit2gtk-webextension/v2_18",
    "webkit2gtk-webextension/gio",
]

[lib]
crate-type = ["dylib"]
