[package]
authors = ["Antoni Boucher <bouanto@zoho.com>"]
description = "Web extension for the web titanium"
license = "MIT"
name = "titanium-web-extension"
repository = "https://github.com/antoyo/titanium"
version = "0.1.0"

[dependencies]
adblock = "0.3.4"
gio = "^0.15.0"
glib = "^0.15.0"
log = "^0.3"
regex = "^0.2.2"
relm = "0.23"
relm-derive = "0.23"
send-cell = "^0.1.2"
simplelog = "^0.4"
syslog = "^3.2.0"
webkit2gtk-webextension = "^0.15.2"
webkit2gtk-webextension-sys = "^0.15.0"
xdg = "^2.0"

[dependencies.titanium-common]
path = "../titanium-common"
version = "0.1.0"

[features]
default = [
    "webkit2gtk-webextension/v2_28",
    "webkit2gtk-webextension/gio",
]

[lib]
crate-type = ["dylib"]
